terracoin-0.8.0.4 :
    - win32 prebuilt binaries now linked against openssl 1.0.1g

terracoin-0.8.0.3 :
     minor: checkpoint added.
     - checkpoint added at height=318300
     - quick build instructions added for 'dev-0.1.3' branch, which is
	 currently merged up to master branch. Should be the last build
	 coming from this branch, will switch to 'dev' branch soon,
	 including latest bitcoin updates.

terracoin-0.8.0.2 (build 54) :
      minor: checkpoint added, protecting past transactions.

terracoin-0.8.0.2 :
      switched to smaller retarget window with smaller target update limits.
	   - will now retarget at 540 blocks intervals, with 1.25 limits.
	   - checkpoint added.

terracoin-0.8.0.1 :
      fixes issue #10 : random blockchain download lockups on 32bits machines (https://github.com/terracoin/terracoin/issues/10)
      alerts: mainnet keypair update (https://github.com/terracoin/terracoin/issues/4)
      new versionning system

terracoin 0.1.3-49 :
      minor testnet updates.

terracoin 0.1.3-48 :
      earlier switch to the new retargetting algorithm.
      will be mandatory on block 181200.

terracoin 0.1.3-47 :
      switched to "static" difficulty retargeting.
       - retargets at 180 blocks interval using timings from last 2160 blocks.

terracoin 0.1.3-44 :
      difficulty halving removal : cleanup.

terracoin 0.1.3-42 :
      removed difficulty halving code that could, under specific circumstances, allow difficulty abuse. Effective at block 175000.

terracoin v0.1.3rc4 :
      [checkpoints] minor,cp: multiple checkpoints added.
      [checkpoints] logging,cp: new cp & verbose cp test log output added.

terracoin release-0.1.3-41 :
      [checkpoints] minor,cp: new cp added
      [checkpoints] minor,cp: new cp added
      [checkpoints] logging,cp: new cp & verbose cp test log output added.

terracoin dev-0.1.3-134 :
      [checkpoints] minor,cp: new cp added

terracoin dev-0.1.3-133 :
      [checkpoints] minor,cp: new cp added
