@@ -98,11 +98,12 @@ namespace Checkpoints
        (191101, uint256("0x000000000000250376b9fca7d353be9de6cc6266368d84e9bb8ab7ed06a4af27"))
        (263883, uint256("0x0000000000000301007ab6d4ecb5cc223e80fb7e057d42f6963ba95b3b45981f"))
        (318300, uint256("0x0000000000000bed2da6a46a698932caacf7fc164767b13c283b246c06440fb5"))
+       (346805, uint256("0x0000000000001054a0e53771c81dc9d057f8b2e6fcbf2069634807b89124c4f9"))
         ;
     static const CCheckpointData data = {
         &mapCheckpoints,
-        1399379944, // * UNIX timestamp of last checkpoint block
-        624280,     // * total number of transactions between genesis and last checkpoint
+        1402831690, // * UNIX timestamp of last checkpoint block
+        664289,     // * total number of transactions between genesis and last checkpoint
                     //   (the tx=... number in the SetBestChain debug.log lines)
         1000.0      // * estimated number of transactions per day after checkpoint
     };
